2006-03-27  Michael Banck  <mbanck@gmx.net>

	* src/formats/fastaformat.cpp: Include babelconfig.h.

2006-03-16 Chris Morley <ob@gaseq.co.uk>

	* data/atomtyp.txt: IMPVAL for halogen ions
	
	* /src/formats/smilesformat.cpp(ParseComplex): Move hcount test
	back again so that [C] is read as C not CH4
	(GetSmilesElement): Restrict addition of implicit H by
	resurrecting normalValence variable. Output [C], not [CH0].

2006-03-15  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/xml/xml.h: Fix std:: namespace decl for type_info.

	* src/Makefile.am: Temporarily disable compilation of src/GUI
	until compile errors are all fixed.

	* scripts/* : More changes to allow building, linking, and running
	(again!) with current CVS tree.

	* src/generic.h (OBTorsion): Add default code for SetData(OBBond*)
	-- not sure what this *should* do. Allows compilation of script
	wrappers.

	* src/obutil.h, src/math/matrix3x3.h, src/math/vector3.h: Add
	#ifndef SWIG portions to prevent SWIG from choking on some
	non-class function declarations.

	* */Makefile.in: Regenerate (get rid of bogus --gnu flags).

2006-03-14 Chris Morley <ob@gaseq.co.uk>

	* src/GUI/OBGUI.cpp(Expand): Mods to avoid errors when filenames
	are empty, have trailing paces, semicolons, etc.
	
	* src/formats/obmolecformat.cpp, obmolecformat.h: Deferred 
	molecule routines (-C -j options) rewritten to ensure no memory leaks
	under normal or error conditions. (Previously rather carelessly
	written, I'm afraid.)
	
	* src/formats/smilesformat.cpp: Corrected [CH0] extension on
	input and made work on output.
	 
	* src/formats/thermoformat.cpp: Added SetDimension(0). Initialise
	MidT. Added tdd extension.
	
	* src/.mol.h: Comments on OBMol copy ctor and assignment saying
	that OBGenericData is copied and on operator+= that it is not.

	* src/base.h, kinetics.h: Mods consequent on OBGenericData changes 

2006-03-13  Geoffrey Hutchison  <babel@geoffhutchison.net>
