@@ -1,5 +1,15 @@
 2006-03-27  Michael Banck  <mbanck@gmx.net>
 
+	* src/fingerprint.h: Fix compilation error with gcc-4.1.
+	  Patch by <vlaaad@users.sourceforge.net>.
+	* src/formats/copyformat.cpp: Likewise.
+	* src/formats/crkformat.cpp: Likewise.
+	* src/formats/xml/cmlreactlformat.cpp: Likewise.
+	* src/formats/xml/xml.h: Likewise.
+	* src/formats/xml/xmlformat.cpp: Likewise.
+
+2006-03-27  Michael Banck  <mbanck@gmx.net>
+
 	* src/formats/fastaformat.cpp: Include babelconfig.h.
 
 2006-03-16 Chris Morley <ob@gaseq.co.uk>
